--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,16 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Hello {{name}}</h1>
+<h1>Hello {{name}}!!!</h1>
 
-<form action="add">
-  Enter 1st number : <input type="text" name="num1" /> <br />
-  Enter 2nd number : <input type="text" name="num2" /> <br />
-  <input type="submit" />
+<form action="add" method="post">
+  {% csrf_token %}
+
+  <label for="num1">Enter 1st number:</label>
+  <input type="text" id="num1" name="num1" /><br />
+
+  <label for="num2">Enter 2nd number:</label>
+  <input type="text" id="num2" name="num2" /><br />
+
+  <input type="submit" value="Submit" />
 </form>
+
 {% endblock %}
